--- a/neural/public/index.html
+++ b/neural/public/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="NeuralHQ offers cutting-edge AI solutions to empower businesses with advanced tools and technologies. From machine learning algorithms to natural language processing, we provide tailored solutions to accelerate your digital transformation journey. Discover how NeuralHQ can revolutionize your business with AI today."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>NeuralHQ.ai</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
