--- a/neural/public/index.html
+++ b/neural/public/index.html
@@ -15,7 +15,7 @@
       name="description"
       content="NeuralHQ offers cutting-edge AI solutions to empower businesses with advanced tools and technologies. From machine learning algorithms to natural language processing, we provide tailored solutions to accelerate your digital transformation journey. Discover how NeuralHQ can revolutionize your business with AI today."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/neural192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
