Change in header logo

--- a/neural/public/index.html
+++ b/neural/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="icon" href="./faviconcopy.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,12 +16,12 @@
       name="description"
       content="NeuralHQ offers cutting-edge AI solutions to empower businesses with advanced tools and technologies. From machine learning algorithms to natural language processing, we provide tailored solutions to accelerate your digital transformation journey. Discover how NeuralHQ can revolutionize your business with AI today."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/neural192.png" />
+    <link rel="apple-touch-icon" href="./neural192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
