Change in faviocn

--- a/neural/public/index.html
+++ b/neural/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <link rel="icon" href="./faviconcopy.png" type="image/icon type" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/faviconcopy.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,6 +12,10 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Baumans&display=swap"
       rel="stylesheet"
+    />
+    <meta
+      name="google-site-verification"
+      content="C2M7HALIhEVh6HMgzdZy8vhGjHNtCUHK28iQZJvGr-U"
     />
     <meta
       name="description"
