change in description of website

--- a/neural/public/index.html
+++ b/neural/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="icon" href="./faviconcopy.png" type="image/icon type" />
-    <link rel="shortcut icon" href="/faviconcopy.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon.png" type="image/icon type" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/icon type" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,14 +19,14 @@
     />
     <meta
       name="description"
-      content="NeuralHQ offers cutting-edge AI solutions to empower businesses with advanced tools and technologies. From machine learning algorithms to natural language processing, we provide tailored solutions to accelerate your digital transformation journey. Discover how NeuralHQ can revolutionize your business with AI today."
+      content="NeuralHQ offers cutting-edge AI solutions to empower businesses with advanced tools and technologies. At NeuralHQ, we are committed to building responsible and human-centric AI systems..."
     />
-    <link rel="apple-touch-icon" href="./neural192.png" />
+    <link rel="apple-touch-icon" href="./favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="manifest" href="./neural192.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
